[gd_scene load_steps=6 format=3 uid="uid://cc7b2xbic6kf8"]

[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/PanelStyle.tres" id="1"]
[ext_resource type="FontFile" uid="uid://b38okvijpcxmv" path="res://addons/madtalk/fonts/FreeSans_smal.tres" id="2"]
[ext_resource type="Script" path="res://addons/madtalk/components/MainEditor_DialogSheetEdit.gd" id="3"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/InputDarkStyle.tres" id="4"]
[ext_resource type="StyleBox" path="res://addons/madtalk/components/resources/ButtonStyle.tres" id="5"]

[node name="DialogSheetEdit" type="Window"]
size = Vector2i(600, 300)
transient = true
exclusive = true
popup_window = true
script = ExtResource("3")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = ExtResource("1")

[node name="BottomBar" type="Control" parent="Panel"]
anchors_preset = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0
offset_bottom = 3.05176e-05

[node name="BtnSave" type="Button" parent="Panel/BottomBar"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -10.0
offset_right = -59.5
offset_bottom = 10.0
focus_mode = 0
theme_override_styles/normal = ExtResource("5")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/focus = ExtResource("5")
text = "OK"

[node name="BtnCancel" type="Button" parent="Panel/BottomBar"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 53.0
offset_top = -10.0
offset_right = 107.0
offset_bottom = 10.0
focus_mode = 0
theme_override_styles/normal = ExtResource("5")
theme_override_styles/hover = ExtResource("5")
theme_override_styles/focus = ExtResource("5")
text = "Cancel"

[node name="IDLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.5796
offset_right = 83.0
offset_bottom = 35.5796
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "Sheet ID:"

[node name="IDLabel2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 216.0
offset_top = 44.0
offset_right = 490.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.592157, 0.592157, 0.592157, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "<- Renaming the sheet ID might break existing
     dialog logic if it relies on this ID"

[node name="SheetIDEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 23.6254
offset_top = 40.3746
offset_right = 201.625
offset_bottom = 64.3746
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = ExtResource("4")
theme_override_styles/focus = ExtResource("4")
placeholder_text = "e.g. npc_forest_wizard"

[node name="DescLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 85.5796
offset_right = 122.0
offset_bottom = 99.5796
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "Sheet description:"

[node name="SheedDescEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 24.0
offset_top = 104.0
offset_right = 502.0
offset_bottom = 128.0
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = ExtResource("4")
theme_override_styles/focus = ExtResource("4")
placeholder_text = "e.g. Wizard NPC in the forest (information and shop)"

[node name="DeleteLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 304.0
offset_top = 149.58
offset_right = 402.0
offset_bottom = 163.58
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
text = "To delete this sheet, type the word
\"delete\" in the box below"

[node name="SheetDeleteEdit" type="LineEdit" parent="Panel"]
layout_mode = 0
offset_left = 308.0
offset_top = 200.0
offset_right = 500.0
offset_bottom = 225.0
theme_override_colors/font_color = Color(1, 0.498039, 0, 1)
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = ExtResource("4")
theme_override_styles/focus = ExtResource("4")
placeholder_text = "type \"delete\" here to delete sheet"

[connection signal="pressed" from="Panel/BottomBar/BtnSave" to="." method="_on_BtnSave_pressed"]
[connection signal="pressed" from="Panel/BottomBar/BtnCancel" to="." method="_on_BtnCancel_pressed"]
